@@ -1,5 +1,6 @@
 prop.appname=APPNAME
 prop.batchsize=BATCHSIZE
+prop.bindaddress=BINDADDRESS
 prop.buffermaxmemory=bufferMaxMemory
 prop.bufferminpackets=bufferMinPackets
 prop.cachemetadata=CACHEMETADATA
@@ -35,6 +36,7 @@ prop.xaemulation=XAEMULATION
 
 prop.desc.appname=The application name advertised by the driver.
 prop.desc.batchsize=The number of statements to submit at once. Batches are broken up in pieces this large.
+prop.desc.bindaddress=The IP address of the local interface that jTDS should bind to when connecting to a database via TCP/IP.
 prop.desc.buffermaxmemory=The global buffer memory limit for all connections (in kilobytes).
 prop.desc.bufferminpackets=The minimum number of packets per statement to buffer to memory.
 prop.desc.cachemetadata=Set to true to enable the caching of column meta data for prepared statements.
